<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Employee.AddEmployeeActivity"
    android:background="@color/_bg_color" >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_shape"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp">

        <include
            android:id="@+id/toolbar"
            layout="@layout/app_toolbar_main"
            />

        <Button
            android:id="@+id/add_employee_backbutton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/toolbar"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="12dp"
            android:background="#03FFFFFF"
            android:drawableStart="@drawable/arrow_back"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />



        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Add New Employee"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <LinearLayout
            android:id="@+id/employee_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/dashboard_background_shape"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMainContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Location Label -->
                    <!--                <TextView-->
                    <!--                    android:id="@+id/empDepartmentId_TextView"-->
                    <!--                    android:layout_width="wrap_content"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:text="Department ID:"-->
                    <!--                    android:textSize="24sp"-->
                    <!--                    android:textColor="@color/black"-->
                    <!--                    android:layout_marginTop="16dp"-->
                    <!--                    android:layout_marginStart="16dp"/>-->

                    <!--                <Spinner-->
                    <!--                    android:id="@+id/empDepartmentId_Spinner"-->
                    <!--                    android:layout_width="match_parent"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:textColorHint="@color/primary_grey"-->
                    <!--                    android:textColor="@color/black"-->
                    <!--                    android:layout_marginTop="8dp"-->
                    <!--                    android:layout_marginBottom="16dp"-->
                    <!--                    android:layout_marginStart="16dp"-->
                    <!--                    android:prompt="@string/select_department"-->
                    <!--                    />-->

                    <!-- Location Label -->
                    <TextView
                        android:id="@+id/empDepartmentName_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Department Name:"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"/>

                    <!-- Location Input -->
                    <Spinner
                        android:id="@+id/departmentName_Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/primary_grey"
                        android:textColor="@color/black"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:prompt="@string/select_department"
                        />
                    <ImageView android:id="@+id/line"
                        android:src="@drawable/line"
                        android:contentDescription="line_5"
                        android:paddingHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                    <TextView
                        android:id="@+id/emplId_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Employee ID"
                        android:textSize="24sp"
                        android:visibility="visible"
                        android:clickable="true"
                        android:enabled="true"
                        android:focusable="true"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp" />

                    <!-- Species Name Input -->
                    <EditText
                        android:id="@+id/empId_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Employee ID"
                        android:textColorHint="@color/primary_grey"
                        android:textColor="@color/black"
                        android:layout_marginTop="8dp"
                        android:enabled="false"
                        android:layout_marginStart="16dp"/>

                    <!-- Title -->
                    <TextView
                        android:id="@+id/empName_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp" />

                    <!-- Species Name Input -->
                    <EditText
                        android:id="@+id/empName_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Employee Name"
                        android:textColorHint="@color/primary_grey"
                        android:textColor="@color/black"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"/>

                    <!-- Date and Time Label -->
                    <TextView
                        android:id="@+id/empSurname_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Surname:"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"/>

                    <!-- Date and Time Input -->
                    <EditText
                        android:id="@+id/empSurname_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/primary_grey"
                        android:textColor="@color/black"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"

                        android:hint="Employee Surname"
                        />




                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/employee_LinearLayout">


            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/_bg_color"
                android:clickable="true"
                android:text="SAVE"
                android:textColor="@color/white" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>